# Rediss-hackathon

./: .gitignore  Dockerfile  README.md  app.js  classification.py  document_processing_services.py  excel_generator.py  fastapi_server.py  index.html  json_mapper.py  migrate_chroma_to_redis.py  prompts.py  pyproject.toml  rag-req.txt  rag_setup.py  redis_rag_setup.py  requirements.txt  requirements2.txt  run_server.sh  schemas.py  server.py  streamlit_app.py  style.css
chroma_storage/: chroma.sqlite3
src/: annotate.py  blocks.py  layout.py  ocr_rapid.py  pdf_utils.py  run_rapid4.py
